<resources>
    <string name="app_name">Keeperly</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Hola "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_de_keeperly">Logo de Keeperly</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_accounts">Cuentas</string>
    <string name="menu_budgets">Presupuestos</string>
    <string name="menu_logout">Logout</string>

    <string name="nombre">Nombre</string>
    <string name="repita_la_contrase_a">Repita la Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio_sesi_n">Inicio Sesión</string>
    <string name="register_failed">El registro ha fallado</string>
    <string name="invalid_name">El nombre no es válido</string>
    <string name="invalid_repeat_pw">La contraseña no coincide</string>
    <string name="invalid_email">El email no es valido</string>
    <string name="register_failed_invalid_data">Datos no validos</string>
    <string name="logout_successfully">Sesion Cerrada correctamente</string>
    <string name="transacciones">Transacciones</string>
    <string name="crear_presupuesto">Crear Presupuesto</string>
    <string name="a_adir_transacci_n">Añadir Transacción</string>
    <string-array name="categorias_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="menu_categories">Categorias</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="editar_categoria">Editar Categoría</string>
    <string name="create_account_failed">Could not create an account</string>
    <string name="invalid_accountname">Account name must be 1 to 30 characters</string>
    <string name="invalid_balance">Balance must be positive</string>
    <string name="account_name">Nombre de la cuenta</string>
    <string name="balance">Balance</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="success_account_creation">New account created</string>
    <string name="menu_create_accounts">Crear Cuenta</string>
    <string name="fecha_dd_mm_yyyy_ini">Fecha Inicio (DD-MM-YYYY)</string>
    <string name="fecha_dd_mm_yyyy_fin">Fecha Fin (DD-MM-YYYY)</string>
    <string name="nombre_del_presupuesto">Nombre del presupuesto</string>
    <string name="icono_de_categorias">Icono de Categorias</string>
    <string name="cantidad">Cantidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="concepto">Concepto</string>
    <string name="categor_a">Categoría</string>
    <string name="cuenta">Cuenta</string>
    <string name="guardar_transacci_n">Guardar Transacción</string>
    <string name="concepto_invalido">El concepto es inválido</string>
    <string name="cantidad_invalida">La cantidad es inválida</string>
    <string name="fecha_invalida">La fecha es inválida</string>
    <string name="crear_transaccion_fallado">La creación de la transacción ha fallado</string>
    <string name="crear_transaccion_datos_invalidos">Los datos de esta transacción no son válidos</string>
    <string name="crear">Crear</string>
    <string name="nombre_presupuesto">Nombre:</string>
    <string name="cantidad_presupuesto">Cantidad:</string>
    <string name="gastado_presupuesto">Gastado:</string>
    <string name="fecha_de_inicio">Fecha de Inicio:</string>
    <string name="fecha_de_fin">Fecha de Fin:</string>
    <string name="categoria_presupuesto">Categoría:</string>
    <string name="guardar">Modificar</string>
    <string name="editar_presupuesto">Editar Presupuesto</string>
    <string name="editar_cuenta">Editar Cuenta</string>
    <string name="editar_transaccion">Editar Transaccion</string>
    <string name="concepto_de_la_transaccion">Concepto de la transaccion</string>
    <string name="fecha">Fecha</string>
    <string name="error_editar_transaccion">Ha habido un error realizando la edicion</string>
    <string name="balance_actual">"Balance: "</string>
    <string name="sincronizar_con_paypal">Sincronizar con PayPal</string>
    <string name="clientid">Client ID</string>
    <string name="secret">Secret</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="fecha_transacci_n">Fecha Transacción</string>
</resources>