<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.ucm.fdi.keeperly.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="es.ucm.fdi.keeperly.ui.cuentas.CuentasFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_cuentas" />

    <fragment
        android:id="@+id/nav_budgets"
        android:name="es.ucm.fdi.keeperly.ui.presupuestos.PresupuestosFragment"
        android:label="@string/menu_budgets"
        tools:layout="@layout/fragment_presupuestos" />
</navigation>