<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sincronizar_con_paypal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/editTextClientID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clientid"
        android:inputType="text"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextSecret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/secret"
        android:inputType="textPassword"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar" />

        <Button
            android:id="@+id/btnSincronizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sincronizar"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
